[gd_scene load_steps=19 format=3 uid="uid://dsqjc76hcoo3d"]

[ext_resource type="PackedScene" uid="uid://blorwsk7msxwu" path="res://Scenes/entity.tscn" id="1_8agaq"]
[ext_resource type="PackedScene" uid="uid://b5l7nm22qv6uc" path="res://Scenes/interaction_area.tscn" id="2_66e00"]
[ext_resource type="Script" path="res://Scenes/butler.gd" id="2_81p06"]
[ext_resource type="Texture2D" uid="uid://cc16r1ln6o8gd" path="res://Sprites/Butler.png" id="3_upehp"]
[ext_resource type="PackedScene" uid="uid://dybwmp1py4err" path="res://inventory/butler_inv.tscn" id="5_u2qf3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fsrik"]
size = Vector2(20, 40)

[sub_resource type="CircleShape2D" id="CircleShape2D_61y3s"]
radius = 21.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cx1f5"]
radius = 21.0238

[sub_resource type="CircleShape2D" id="CircleShape2D_7npqx"]
radius = 21.0238

[sub_resource type="AtlasTexture" id="AtlasTexture_nkow5"]
atlas = ExtResource("3_upehp")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_asauq"]
atlas = ExtResource("3_upehp")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2xoy"]
atlas = ExtResource("3_upehp")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6k8a"]
atlas = ExtResource("3_upehp")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iiuvv"]
atlas = ExtResource("3_upehp")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_23fsu"]
atlas = ExtResource("3_upehp")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1kob"]
atlas = ExtResource("3_upehp")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpeg4"]
atlas = ExtResource("3_upehp")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_q7cb4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkow5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asauq")
}],
"loop": true,
"name": &"after_death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2xoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6k8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iiuvv")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_23fsu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1kob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpeg4")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="Butler" instance=ExtResource("1_8agaq")]
collision_layer = 4
collision_mask = 21
script = ExtResource("2_81p06")
inv = null
chest_name = ""
gravity = 600
terminal_velocity = 500

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("RectangleShape2D_fsrik")

[node name="InteractionAreaShop" parent="." index="2" instance=ExtResource("2_66e00")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionAreaShop" index="0"]
shape = SubResource("CircleShape2D_61y3s")

[node name="InteractionArea" parent="." index="3" instance=ExtResource("2_66e00")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea" index="0"]
shape = SubResource("CircleShape2D_cx1f5")

[node name="PlayerLeft" type="Area2D" parent="." index="4"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerLeft" index="0"]
shape = SubResource("CircleShape2D_7npqx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="5"]
sprite_frames = SubResource("SpriteFrames_q7cb4")
autoplay = "default"
flip_h = true

[node name="CanvasLayer" type="CanvasLayer" parent="." index="6"]

[node name="ButlerInv" parent="CanvasLayer" index="0" instance=ExtResource("5_u2qf3")]
visible = false

[node name="Food" type="Sprite2D" parent="." index="7"]
position = Vector2(7.5, -23)
scale = Vector2(0.8, 0.8)

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="body_exited" from="PlayerLeft" to="." method="_on_player_left_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="send_food" from="CanvasLayer/ButlerInv" to="." method="_on_butler_inv_send_food"]
